--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "all_u_fit",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,8 +12,12 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@shopify/flash-list": "1.6.3",
     "expo": "~50.0.14",
+    "expo-dev-client": "~3.3.11",
+    "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.1",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^6.7.2",
     "nativewind": "^2.0.11",
@@ -23,8 +26,7 @@
     "react-native-gesture-handler": "^2.16.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
-    "expo-font": "~11.10.3"
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
