--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@shopify/flash-list": "1.6.3",
     "expo": "~50.0.14",
+    "expo-av": "~13.10.6",
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
@@ -23,11 +24,12 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "expo-av": "~13.10.6"
+    "react-native-vision-camera": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
